# acid4sigmas-web-tools

./: .gitignore  Cargo.toml  LICENSE  README.md  build.py  index.html  package.json  vite.config.ts
src/: App.css  main.tsx
src/tsx_src/: App.tsx  FilePicker.tsx  Navbar.tsx  TopBar.tsx
src/tsx_src/editor/: Apply.tsx  Grain.tsx  Pixelate.tsx  UndoRedo.tsx
src/tsx_src/files/: FilePicker.tsx  FolderPicker.tsx
src/tsx_src/pages/: Editor.tsx  File.tsx
src/tsx_src/ui_components/: Button.tsx  Container.tsx  FilePicker.tsx  NavLink.tsx
src/wasm_src/: cache.rs  image_processor.rs  lib.rs
src/wasm_src/effects/: grain.rs  mod.rs  pixelate.rs  rgb_channel.rs
src/wasm_src/file_tools/: compress.rs  mod.rs
