[package]
name = "tester"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/wasm_src/lib.rs"

[dependencies]
ansi_term = "0.12.1"
base64 = "0.22.1"
clap = { version = "4.3.0", features = [ "derive" ] }
fastrand = { version = "2.3.0", features = ["js"] }
flate2 = "1.0.35"
image = "0.25.5"
lru = "0.12.5"
rand = { version = "0.8.5" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
undo = "0.51.0"
unicode-segmentation = "1.10.1"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-struct = "0.1.0"
web-sys = { version = "0.3.77", features = ["CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "HtmlElement", "ImageData", "Window", "console"] }
zip = { version = "2.2.2", default-features = false, features = [ "deflate" ] }
